enhanced user interface and app icon

--- a/Draw Tic Tac Toe/Localizable.strings
+++ b/Draw Tic Tac Toe/Localizable.strings
@@ -28,7 +28,7 @@
 "q9" = "q9";
 
 //info label
-"drawBoard" = "Please draw the board to start the game";
+"drawBoard" = "Double tap to redraw board";
 "startGame" = "Either X or O can start";
 "xTurn" = "X's turn";
 "oTurn" = "O's turn";
